@@ -31,6 +31,8 @@ set "CLASS_PATH=%cd%/../"
 rem 优化JVM参数
 set "JAVA_OPTS=%JAVA_OPTS% -Xms512m -Xmx1024m -Dfile.encoding=utf-8"
 
+set "JAVA_OPTS=%JAVA_OPTS% --add-opens=java.base/java.util=ALL-UNNAMED"
+
 rem set "JAVA_OPTS=%JAVA_OPTS% -Dnacos.home=./data"
 
 rem 方式一、配置外部自定义的属性文件（建议）
